--- a/FinalProject/FinalProject/FinalProject.vcxproj.filters
+++ b/FinalProject/FinalProject/FinalProject.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.shader" />
+    <None Include="channeltextureblend.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
