--- a/FinalProject/FinalProject/FinalProject.vcxproj.filters
+++ b/FinalProject/FinalProject/FinalProject.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
